:bug: Fix skip to main content tap target too small

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -61,7 +61,7 @@ body {
   font-size: 1rem;
   background-color: var(--color-bg);
   color: var(--color-fg);
-  padding: 1rem 2rem;
+  padding: 0 2rem 1rem 2rem;
 }
 
 a {
@@ -203,12 +203,12 @@ strong {
   justify-content: center;
   color: var(--color-bg);
   text-decoration: none;
-  letter-spacing: 1px;
   font-size: 1rem;
   line-height: 1;
   max-width: var(--grid-max-width);
   margin-left: auto;
   margin-right: auto;
+  padding: 0.5rem;
 }
 
 .header__skipToMainContent:focus {
